--- a/Solutions.html
+++ b/Solutions.html
@@ -52,7 +52,7 @@
                 <img class="h-40 rounded w-full object-cover object-center mb-6" src="property.jpg" alt="content">
                 <!--<h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">SUBTITLE</h3>-->
                 <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Property</h2>
-                <p class="leading-relaxed text-base">We have highly capable offering best property solution to the customer.</p>
+                <p class="leading-relaxed text-base">We have highly capable of offering best property solution to the customer.</p>
                 <br>
                 <a class="text-indigo-500 inline-flex items-center" href="Property.html">Learn More</a>
               </div>
