--- a/About Us.html
+++ b/About Us.html
@@ -46,8 +46,25 @@
       </div>
     </section>
 
+    <section class="text-gray-600 body-font">
+      <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+        <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="Our Mission.jpeg">
+        <div class="text-center lg:w-2/3 w-full">
+          <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Company Overview</h1>
+          <p class="mb-8 leading-relaxed">Krishna Consultancy is a strategic, influential, and credible leader in the field of IT Solution, Education, Property, Startups and all governments projects founded in 2021. Our team of experts have diligently ensured that we align the solution to meet 
+            business needs of enterprises with agility and precision. We are global, and our customer base spans across industries on the worldwide map.</p>
+          <p class="mb-8 leading-relaxed">krishna Consultancy, a leading System Integration Company offers Consultancy in IT, Education, Property, Startups and all the governments projects for the fulfillment of requirements of Large and Small Enterprises. Krishna Consultancy has strong dedicated & motivated services oriented team focused on fulfillment of customer requirements and business needs.</p>
+          <!--<p class="mb-8 leading-relaxed">We are proud of our Company and the relationship we're built with our clients and the services we've provided to our community.</p>
+          <p class="mb-8 leading-relaxed">Our mission is to use our expertise for the benefit of our customers, become their trusted partner and successfully complete their needs with the highest standards of implementation, integration and support services.</p>-->
+          <!--<div class="flex justify-center">
+            <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
+            <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button>
+          </div>
+        </div>-->
+      </div>
+    </section>
   
-  <section class="text-gray-600 body-font">
+  <!--<section class="text-gray-600 body-font">
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
       <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Company Overview
@@ -59,14 +76,14 @@
             <p class="mb-8 leading-relaxed">krishna Consultancy, a leading System Integration Company offers Consultancy in IT, Education, Property, Startups and all the governments projects for the fulfillment of requirements of Large and Small Enterprises. Krishna Consultancy has strong dedicated & motivated services oriented team focused on fulfillment of customer requirements and business needs.</p>
         <div class="flex justify-center">
           <!--<button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
-          <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button>-->
+          <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button>--
         </div>
       </div>
       <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-        <img class="object-cover object-center rounded" alt="hero" src="Company Overview.jpg">
+        <img class="object-cover object-center rounded" alt="hero" src="Our Mission.jpeg">
       </div>
     </div>
-  </section>
+  </section>-->
 
   <section class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto">
@@ -109,20 +126,36 @@
     </div>
   </section>
 
-
   <section class="text-gray-600 body-font">
+    <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+      <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="Our Mission.jpg">
+      <div class="text-center lg:w-2/3 w-full">
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Our Mission</h1>
+        <p class="mb-8 leading-relaxed">Our mission is to provide full range of IT, Education, Property, Startups and all governments projects and at same time maintaining the trust and transparency in our relationship with them</p>
+        <p class="mb-8 leading-relaxed">We are proud of our Company and the relationship we're built with our clients and the services we've provided to our community.</p>
+        <p class="mb-8 leading-relaxed">We are proud of our Company and the relationship we're built with our clients and the services we've provided to our community.</p>
+        <p class="mb-8 leading-relaxed">Our mission is to use our expertise for the benefit of our customers, become their trusted partner and successfully complete their needs with the highest standards of implementation, integration and support services.</p>
+        <!--<div class="flex justify-center">
+          <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
+          <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button>
+        </div>
+      </div>-->
+    </div>
+  </section>
+
+  <!--<section class="text-gray-600 body-font">
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
       <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-        <img class="object-cover object-center rounded" alt="hero" src="Our Mission.jpeg">
+        <img class="object-cover object-center rounded" alt="hero" src="Our Mission.jpg">
       </div>
       <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Our Mission</h1>
         <p class="mb-8 leading-relaxed">Our mission is to provide exceptional service by delivering high quality that allow our clients to effectivelymeet their business goal.</p>
-      <!--<br>-->
+      <!--<br>--
         <p class="mb-8 leading-relaxed">Our mission is to provide full range of IT, Education, Property, Startups and all governments projects and at same time maintaining the trust and transparency in our relationship with them</p>
-        <!--<br>-->
+        <!--<br>--
         <p class="mb-8 leading-relaxed">We are proud of our Company and the relationship we're built with our clients and the services we've provided to our community.</p>
-        <!--<br>-->
+        <!--<br>--
         <p class="mb-8 leading-relaxed">Our mission is to use our expertise for the benefit of our customers, become their trusted partner and successfully complete their needs with the highest standards of implementation, integration and support services.</p>
         <div class="flex w-full md:justify-start justify-center items-end">
           <div class="relative mr-4 lg:w-full xl:w-1/2 w-2/4">
@@ -154,8 +187,8 @@
           </button>
         </div>
       </div>
-    </div>-->
-  </section>
+    </div>
+  </section>-->
 
 
 <!--<section class="text-gray-600 body-font">
