--- a/Agriculture Business  Animal Husbandry.html
+++ b/Agriculture Business  Animal Husbandry.html
@@ -7,6 +7,7 @@
     <!--  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="desgin.css">
     <title>Krishna Consultancy</title>
+    <link rel="shortcut icon" href="logo.jpg" type="image/jpg">
 </head>
 <body>
   <header class="text-gray-600 body-font">
