--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <img class="h-40 rounded w-full object-cover object-center mb-6" src="Education.jpg" alt="content">
                 <!--<h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">SUBTITLE</h3>-->
                 <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Education</h2>
-                <p class="leading-relaxed text-base">We have provide expert guidance on universities courses. Admission to help your find the right collage to your child. Seek Expert opinionform best counselers.</p>
+                <p class="leading-relaxed text-base">We have provide expert guidance on universities courses. Admission to help your find the right collage to your child. Seek Expert opinion form best counselers.</p>
                 <br>
                 <a class="text-indigo-500 inline-flex items-center" href="Education.html">Learn More</a>
               </div>
@@ -83,7 +83,7 @@
                 <img class="h-40 rounded w-full object-cover object-center mb-6" src="Insurance.jpg" alt="content">
                 <!--<h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">SUBTITLE</h3>-->
                 <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Insurance</h2>
-                <p class="leading-relaxed text-base">We have provide expert guid to help assess your risks and provide you with the right coverage to compensate you for any loss.</p>
+                <p class="leading-relaxed text-base">We have provide expert guidance to help assess your risks and provide you with the right coverage to compensate you for any loss.</p>
                 <br>
                 <a class="text-indigo-500 inline-flex items-center" href="Insurance.html">Learn More</a>
               </div>
