--- a/Agriculture Business  Animal Husbandry.html
+++ b/Agriculture Business  Animal Husbandry.html
@@ -66,7 +66,7 @@
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Animal Husbandry
           <!--<br class="hidden lg:inline-block">readymade gluten-->
         </h1>
-        <p class="mb-8 leading-relaxed">We have provide expert guidance for fish farming, Goat farming, Milk - Farms etc.</p>
+        <p class="mb-8 leading-relaxed">We have provide expert guidance for fish farming, Goat farming, Milk Farms etc.</p>
         <div class="flex justify-center">
           <!--<button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
           <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button>
