--- a/Education.html
+++ b/Education.html
@@ -43,7 +43,7 @@
       <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="Education.jpg">
       <div class="text-center lg:w-2/3 w-full">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Education</h1>
-        <p class="mb-8 leading-relaxed">We have provide expert guidance on universities courses. Admission to help your find the right collage to your child. Seek Expert opinion form best counselers.</p>
+        <p class="mb-8 leading-relaxed">We have provide expert guidance on universities courses. Admission to help your find the right collage to your child. Seek Expert opinion from best counselers.</p>
         <!--<div class="flex justify-center">
           <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
           <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button>
