--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <img class="h-40 rounded w-full object-cover object-center mb-6" src="Education.jpg" alt="content">
                 <!--<h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">SUBTITLE</h3>-->
                 <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Education</h2>
-                <p class="leading-relaxed text-base">We have provide expert guidance on universities courses. Admission to help your find the right collage to your child. Seek Expert opinion form best counselers.</p>
+                <p class="leading-relaxed text-base">We have provide expert guidance on universities courses. Admission to help your find the right collage to your child. Seek Expert opinion from best counselers.</p>
                 <br>
                 <a class="text-indigo-500 inline-flex items-center" href="Education.html">Learn More</a>
               </div>
@@ -139,7 +139,7 @@
                 <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Agriculture Business / Animal Husbandry</h2>
                 <p class="leading-relaxed text-base">We have provide expert guidance for poly house & latest technology to use in Agriculture business.</p>
                 <br>
-                <p class="leading-relaxed text-base">We have provide expert guidance for fish farming, Goat farming, Milk - Farms etc.</p>
+                <p class="leading-relaxed text-base">We have provide expert guidance for fish farming, Goat farming, Milk Farms etc.</p>
                 <br>
                 <a class="text-indigo-500 inline-flex items-center" href="Agriculture Business  Animal Husbandry.html">Learn More</a>
               </div>
